--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
+    "@types/supertest": "^2.0.11",
+    "jest": "^26.6.3",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
@@ -22,6 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
