--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "jest": "^26.6.3",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
@@ -33,6 +34,7 @@
     "moment": "^2.29.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.32"
   }
 }
