--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Pedro Henrique Thomé de Almeida",
@@ -28,6 +29,7 @@
     "@joi/date": "^2.1.0",
     "celebrate": "^14.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "lodash": "^4.17.21",
